# angular

./: angular2.js  angular2.min.js  gulpfile.js  index.html  webpack.config.js
aio/scripts/: _payload-limits.json
goldens/public-api/core/: index.md
integration/: _payload-limits.json
modules/@angular/compiler/src/output/: output_interpreter.ts
modules/@angular/compiler/src/schema/: dom_element_schema_registry.ts  element_schema_registry.ts
modules/@angular/compiler/src/template_parser/: template_parser.ts
modules/@angular/compiler/test/template_parser/: template_parser_spec.ts
modules/@angular/compiler/testing/: schema_registry_mock.ts
modules/@angular/core/test/debug/: debug_node_spec.ts
modules/@angular/core/test/linker/: integration_spec.ts  projection_integration_spec.ts  view_injector_integration_spec.ts
modules/angular2/: angular2.ts
modules/angular2/src/common/directives/: ng_class.ts
modules/angular2/src/core/compiler/: element_injector.ts
modules/angular2/src/core/util/: decorators.ts
modules/angular2/test/common/directives/: ng_class_spec.ts
modules/angular2/test/core/compiler/: integration_spec.ts
modules/benchmarks/: tsconfig-build.json
modules/benchmarks/src/class_bindings/: BUILD.bazel  app.component.ts  class_bindings.component.ts
modules/benchmarks/src/expanding_rows/: benchmarkable_expanding_row.ts
tools/broccoli/html-replace/: SCRIPTS.html  SCRIPTS_benchmarks.html
tools/broccoli/trees/: browser_tree.ts
tools/public_api_guard/common/: common.d.ts
tools/public_api_guard/core/: core.d.ts
(+3 files in other folders)
