package(default_visibility = ["//modules/benchmarks:__subpackages__"])

load("//tools:defaults.bzl", "ng_module", "ng_rollup_bundle")
load("@npm_bazel_typescript//:index.bzl", "ts_devserver")

ng_module(
    name = "application_lib",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    deps = [
        "//packages:types",
        "//packages/common",
        "//packages/core",
        "//packages/platform-browser",
        "@npm//rxjs",
    ],
)

ng_rollup_bundle(
    name = "bundle",
    entry_point = ":index_aot.ts",
    deps = [
        ":application_lib",
        "@npm//rxjs",
    ],
)

ts_devserver(
    name = "prodserver",
    index_html = "index.html",
    port = 4200,
    static_files = [
        ":bundle.min_debug.es2015.js",
        "@npm//:node_modules/zone.js/dist/zone.js",
    ],
)
